# robopy

./: .gitignore  404.html  LICENCE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml
api/camera/: index.html
api/control-table/: index.html
api/dynamixel/: index.html
api/robot/: index.html
docs/: examples.md  getting-started.md  index.md  qa.md  usage.md
docs/api/: camera.md  control-table.md  dynamixel.md  robot.md
getting-started/: index.html
qa/: index.html
search/: search_index.json
src/robopy/: __init__.py  camera.py  control_table.py  dynamixel.py  robot.py
tests/: __init__.py  conftest.py  test__control_table.py  test__dynamixel.py
usage/: index.html
