[project]
name = "robopy"
version = "0.1.1"
description = "Pythonだけでロボットを動かすためのAPI"
dependencies = [
    "dynamixel-sdk>=3.7.31",
    "opencv-python>=4.9.0.80",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.0",
    "mypy>=1.9.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "mkdocs>=1.5.3",
    "mkdocstrings[python]>=0.24.3",
    "mkdocs-material>=9.5.17",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/robopy"]

[tool.rye.scripts]
test = { chain = ["pytest -ra --cov=src --cov-report=term --cov-report=xml"] }

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "src",
    "tests",
]

[tool.ruff]
line-length = 80
target-version = "py38"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["CPY"]
fixable = ["ALL"]
unfixable = []
exclude = [".git", ".ruff_cache", ".venv",]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"src/robopy/control_table.py" = ["PLR2004"]
"tests/test__control_table.py" = ["PLR2004"]
"tests/*.py" = ["S101"]

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["robopy"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
