[project]
name = "robopy"
version = "0.1.2"
description = "Pythonだけでロボットを動かすためのAPI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dynamixel-sdk>=3.7.31",
    "opencv-python>=4.10.0.84",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.2",
    "pydoclint>=0.5.9",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.8",
]
doc = [
    "mkdocs-material>=9.5.39",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.26.1",
]

[tool.uv]
package = true

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "src",
    "tests",
]

[tool.ruff]
line-length = 80
target-version = "py38"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["CPY"]
fixable = ["ALL"]
unfixable = []
exclude = [".git", ".ruff_cache", ".venv",]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"src/robopy/control_table.py" = ["PLR2004"]
"tests/test__control_table.py" = ["PLR2004"]
"tests/*.py" = ["S101", "DOC501"]

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["robopy"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pydoclint]
style = 'numpy'
exclude = '\.git|\.ruff_cache|\.mypy_cache|\.venv'
